--- a/abz.agency/src/styles/_reset.scss
+++ b/abz.agency/src/styles/_reset.scss
@@ -1,7 +1,39 @@
-
-*, *::before, *::after { box-sizing: border-box; }
-html, body, #root { height: 100%; }
-body, h1, h2, h3, h4, p, figure, blockquote, dl, dd { margin: 0; }
-ul[role='list'], ol[role='list'] { list-style: none; margin:0; padding:0; }
-img, picture { max-width: 100%; display: block; }
-button, input, select, textarea { font: inherit; }
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+html,
+body,
+#root {
+  height: 100%;
+}
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+button,
+input,
+select,
+textarea {
+  font: inherit;
+}
